force-app/main/default/objects/d4c_ProducerCommunication__c/fields/d4c_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>d4c_PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>