force-app/main/default/objects/d4c_ProducerCommunication__c/fields/d4c_PhoneType__c.field-meta.xml
<CustomField>
    <fullName>d4c_PhoneType__c</fullName>
    <label>Phone Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>