force-app/main/default/objects/d4c_ProducerCommunication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>d4c_EmailAddress__c</columns>
    <columns>d4c_EmailType__c</columns>
    <columns>d4c_PhoneType__c</columns>
    <columns>d4c_PhoneNumber__c</columns>
    <columns>d4c_Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>